--- a/app/src/components/RoomSettingsPopover/style.module.scss
+++ b/app/src/components/RoomSettingsPopover/style.module.scss
@@ -4,8 +4,6 @@
 	display: flex;
 	flex-direction: column;
 	gap: 12px;
-	width: 1000px;
-	max-width: 100%;
 
 	&__heading {
 		@include font-heading(24);
